--- a/Project/templates/translations.html
+++ b/Project/templates/translations.html
@@ -5,6 +5,9 @@
           href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.10/js/select2.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.10/css/select2.min.css" rel="stylesheet"/>
     <style>
         body {
             margin: 0;
@@ -42,7 +45,44 @@
     </div>
 </nav>
 
-<main style="min-height: calc(100vh - 150px); display: inline-block; width: 100%;">
+<main style="min-height: calc(100vh - 110px); display: inline-block; width: 100%;">
+    <div style="height:250px;padding-top:20px;padding-left:50px;">
+
+            <div style="float:left;width:380px;">
+                <div>
+                    <label for="initial-language-picker">Select your language</label>
+                    <select name="language-picker-select" id="initial-language-picker" style="width:100px;">
+                        <option lang="de" value="ro" selected>Romanian</option>
+                        <option lang="en" value="en">English</option>
+                        <option lang="fr" value="fr">French</option>
+                        <option lang="it" value="it">Italian</option>
+                    </select>
+                </div>
+                <div>
+                     <input id="initial-text"
+                       style="width:300px;height:150px;">
+                </div>
+            </div>
+            <div style="float:left;padding-left:40px;width:380px;">
+                <div>
+                    <label for="target-language-picker">Select your language</label>
+                    <select name="language-picker-select" id="target-language-picker" style="width:100px;">
+                        <option lang="de" value="ro">Romanian</option>
+                        <option lang="en" value="english" selected>English</option>
+                        <option lang="fr" value="fr">French</option>
+                        <option lang="it" value="it">Italian</option>
+                    </select>
+                </div>
+                <div>
+                    <input id="translated-text"
+                       style="width:300px;height:150px;">
+                </div>
+            </div>
+            <div>
+                <button id="translateBtn" class="btn green">Translate</button>
+            </div>
+
+    </div>
     <div>
         <table>
             <thead style="border: 1px solid black;">
@@ -69,11 +109,35 @@
     </div>
 </main>
 
-<footer class="page-footer font-small green pt-4" style="height:150px;">
+<footer class="page-footer font-small green pt-4" style="height:110px;">
     <img src="../static/drctch.png" alt="-?-" style="float:right;margin-right:60px;">
 </footer>
 
 <script>
+
+    function translateText() {
+        var initial_language = document.getElementById('initial-language-picker').value;
+        var target_language = document.getElementById('target-language-picker').value;
+        var initial_text = document.getElementById('initial-text').value;
+        var xhr = new XMLHttpRequest();
+        xhr.onreadystatechange = function () {
+            if (this.readyState == 4) {
+                if (!window.alert(this.responseText)) {
+                    window.location.reload();
+                }
+            }
+        };
+        xhr.open("POST", "/translations", true);
+        xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+        xhr.send("initial_language=" + initial_language, "target_language=" + target_language,
+        "initial_text=" + initial_text);
+    }
+
+    $('select').select2({ width: '170px', placeholder: "Select an Option", allowClear: true });
+
+    document.getElementById("translateBtn").addEventListener("click", function () {
+        translateText();
+    });
 
 </script>
 </body>
