--- a/Project/templates/translations.html
+++ b/Project/templates/translations.html
@@ -139,11 +139,8 @@
         };
         xhr.open("POST", "/translations", true);
         xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
-        var response = xhr.send("initial_language=" + initial_language + "&target_language=" + target_language +
+        xhr.send("initial_language=" + initial_language + "&target_language=" + target_language +
         "&initial_text=" + initial_text);
-        
-        $('.translated-text').val(response.translation);
-        $("#source_audio").attr("src", response.file_name);
     }
 
     $('select').select2({ width: '170px', placeholder: "Select an Option", allowClear: true });
